# src/types/calculator.ts
@@ -1,5 +1,10 @@
-export interface CalculatorRequestBody {
-  operator: '+' | '-' | '*' | '/';
-  operand1: number;
-  operand2: number;
-}
+import { components } from "../schemas";
+
+export type CalculatorCommandDto = components["schemas"]["CalculatorCommand"];
+
+export type CalculatorResultDto = components["schemas"]["CalculatorResult"];
+// export interface CalculatorRequestBody {
+//   operator: '+' | '-' | '*' | '/';
+//   operand1: number;
+//   operand2: number;
+// }
